Add: new endpoint( / ) - list all urls, data; Update: README.md, swaggo docs
