# docs/swagger.yaml
@@ -10,6 +10,17 @@ definitions:
       error:
         type: string
     type: object
+  responses.GetAllUrls:
+    properties:
+      createdAt:
+        type: string
+      id:
+        type: integer
+      originalUrl:
+        type: string
+      shortUrl:
+        type: string
+    type: object
   responses.GetUrl:
     properties:
       originalUrl:
@@ -30,6 +41,33 @@ info:
   title: Url shortener
   version: "1.0"
 paths:
+  /:
+    get:
+      consumes:
+      - application/json
+      operationId: get-all-urls
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: All urls
+          schema:
+            items:
+              $ref: '#/definitions/responses.GetAllUrls'
+            type: array
+        "400":
+          description: Error response
+          schema:
+            $ref: '#/definitions/responses.ErrorResponse'
+        "401":
+          description: Error response
+          schema:
+            $ref: '#/definitions/responses.ErrorResponse'
+        "500":
+          description: Error response
+          schema:
+            $ref: '#/definitions/responses.ErrorResponse'
+      summary: Shows all urls
   /create:
     post:
       consumes:
