# responses/api.go
@@ -1,5 +1,7 @@
 package responses
 
+import "time"
+
 type CreateUrl struct {
 	OriginalURL string `json:"originalURL"`
 }
@@ -7,6 +9,13 @@ type CreateUrl struct {
 type GetUrl struct {
 	OriginalURL string `json:"originalUrl"`
 	ShortURL    string `json:"shortUrl"`
+}
+
+type GetAllUrls struct {
+	ID          uint `gorm:"primarykey"`
+	CreatedAt   time.Time
+	OriginalURL string `json:"originalUrl" gorm:"original_url"`
+	ShortURL    string `json:"shortUrl" gorm:"short_url"`
 }
 
 type GetUrlRequest struct {
